# Systematic-Weakness-Detection

./: .gitignore  README.md  pyproject.toml
data/ODDs/: celebA_ontology.csv  gpt_odd_celeba.py  pedestrian_ontology.csv
data/precision_and_recall_csvs/: precisions_and_recall_bdd100k.csv  precisions_and_recall_celebA.csv
data/prompts/: prompts_celebA.py  prompts_pedestrians.py
experiments/: README.md  run_full_bdd100k_experiment.py  run_full_celeba_experiment.py  run_gpt_metadata_gen_only.py
experiments/configs/: bdd100k_config.py  celeba_config.py
src/metadata/: __init__.py  clip_embeddings.py  clip_metadata_generator.py  gpt_metadata_generator.py  metadata_factory.py
src/models/: __init__.py  base_model.py  bdd_detection_models.py  detection_models.py  imagenet21k_models.py  model_factory.py
src/sliceline/: __init__.py  core.py  utils.py
src/utils/: __init__.py
src/utils/imagenet21k_helpers/: __init__.py  semantic_loss.py
